--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
       </div>
     </section>
     <section class="chat-section">
-      <button id="open-chat">Start Chat</button>
+      <button id="open-chat">Chat m ed websiden vår!</button>
       <div id="chatbox" class="chatbox hidden">
         <div id="chat-messages"></div>
         <input type="text" id="chat-input" placeholder="Hva kan vi hjelpe deg med? Møterom? DJs? Sceneutstyr?">
