--- a/public/index.html
+++ b/public/index.html
@@ -29,11 +29,13 @@
     </section>
     <section class="chat-section">
       <button id="open-chat">Chat med websiden</button>
-      <div id="chatbox" class="chatbox hidden">
+      <div id="chatbox" class="hidden">
+        <div id="chat-header">Chat med LS LiveSolutions</div>
         <div id="chat-messages"></div>
-        <input type="text" id="chat-input" placeholder="Hva kan vi hjelpe deg med? Møterom? DJs? Sceneutstyr?">
-        <button id="send-message">Send</button>
-        <button id="download-chat">Last Ned Chat</button>
+        <div id="chat-input-area">
+          <input type="text" id="chat-input" placeholder="Hva er du på jakt etter? La meg hjelpe deg finne en løsning!" />
+        </div>
+        <button id="download-chat">Last ned Chat</button>
       </div>
     </section>
   </main>
