--- a/public/index.html
+++ b/public/index.html
@@ -1,35 +1,23 @@
 <!DOCTYPE html>
-<html lang="no">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="LS LiveSolutions: Møterom og sceneproduksjon i Norge">
-  <meta name="keywords" content="møterom løsninger, sceneproduksjon, AV utstyr, Norge">
   <title>LS LiveSolutions</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/styles.css">
+  <!-- Firebase SDK -->
+  <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-firestore-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-storage-compat.js"></script>
 </head>
 <body>
   <header>
-    <img src="img/logo.png" alt="LS LiveSolutions Logo" class="logo">
-    <nav>
-      <ul>
-        <li><a href="about.html">Om Oss</a></li>
-        <li><a href="solutions.html">Tidligere Løsninger</a></li>
-        <li><a href="contact.html">Kontakt</a></li>
-      </ul>
-    </nav>
+    <h1>LS LiveSolutions</h1>
+    <p>AV-løsninger for kontorer, møterom og events</p>
   </header>
   <main>
-    <section class="hero">
-      <h1>LS LiveSolutions: Skaper Uforglemmelige Rom & Arrangementer</h1>
-      <div class="hero-images">
-        <img src="img/office.jpg" alt="Moderne møterom med AV-utstyr" class="hero-img">
-        <img src="img/stage.jpg" alt="Sceneproduksjon med lys og lyd" class="hero-img">
-      </div>
-    </section>
-    <section class="chat-section">
-      <button id="open-chat">Chat med websiden</button>
-      <div id="chatbox" class="hidden">
+    <section id="chat-section">
+      <div id="chatbox">
         <div id="chat-header">Chat med LS LiveSolutions</div>
         <div id="chat-messages"></div>
         <div id="chat-input-area">
@@ -40,15 +28,8 @@
     </section>
   </main>
   <footer>
-    <p>LS LiveSolutions AS<br>
-    [Lageradresse, f.eks. Industriveien 123, 1234 Oslo]<br>
-    Telefon: [+47 123 45 678]<br>
-    E-post: [info@livesolutionss.no]<br>
-    <a href="/privacy.html">Personvernerklæring</a></p>
+    <p>&copy; 2025 LS LiveSolutions</p>
   </footer>
-  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-storage.js"></script>
   <script src="js/chat.js"></script>
 </body>
 </html>
