--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,8 @@
     <section class="hero" id="home">
       <h1>AV-løsninger for kontorer, møterom og events</h1>
       <div class="hero-images">
-        <img src="img/office.png" alt="Modern Office" class="hero-img">
-        <img src="img/stage.png" alt="Stage Setup" class="hero-img">
+        <img src="public/img/office.png" class="hero-img">
+        <img src="public/img/stage.png" class="hero-img">
       </div>
     </section>
     <section class="chat-section">
