--- a/public/index.html
+++ b/public/index.html
@@ -15,10 +15,10 @@
     <img src="img/logo.png" alt="LS LiveSolutions Logo" class="logo">
     <nav>
       <ul>
-        <li><a href="#home">Hjem</a></li>
-        <li><a href="#about">Om Oss</a></li>
-        <li><a href="#solutions">Løsninger</a></li>
-        <li><a href="#contact">Kontakt</a></li>
+        <li><a href="index.html">Hjem</a></li>
+        <li><a href="about.html">Om Oss</a></li>
+        <li><a href="solutions.html">Løsninger</a></li>
+        <li><a href="contact.html">Kontakt</a></li>
       </ul>
     </nav>
   </header>
