--- a/public/index.html
+++ b/public/index.html
@@ -35,8 +35,8 @@
         <div id="chat-messages"></div>
         <div id="chat-input-area">
           <input type="text" id="chat-input" placeholder="Hva er du på jakt etter? La meg hjelpe deg finne en løsning!" />
+          <button id="download-chat"></button
         </div>
-        <button id="download-chat">Last ned Chat</button>
       </div>
     </section>
   </main>
