--- a/public/index.html
+++ b/public/index.html
@@ -23,11 +23,10 @@
     </nav>
   </header>
   <main>
-    <section class="hero" id="home">
-      <h1>AV-løsninger for kontorer, møterom og events</h1>
-      <div class="hero-images">
-        <img src="img/office.jpg" class="hero-img">
-        <img src="img/stage.jpg" class="hero-img">
+    <section class="banner">
+      <img src="img/office.jpg" alt="Office Meeting Room Solution" class="banner-img">
+      <div class="banner-text">
+        <h1>AV-løsninger for moderne kontorer og møterom</h1>
       </div>
     </section>
     <section class="chat-section">
@@ -35,7 +34,7 @@
         <div id="chat-messages"></div>
         <div id="chat-input-area">
           <input type="text" id="chat-input" placeholder="Hva er du på jakt etter? La meg hjelpe deg finne en løsning!" />
-          <button id="download-chat"></button
+          <button id="download-chat"></button>
         </div>
       </div>
     </section>
