--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
   </header>
   <main>
     <section class="banner">
-      <img src="img/office.jpg" alt="Office Meeting Room Solution" class="banner-img">
+      <img src="img/office3.jpg" alt="Office Meeting Room Solution" class="banner-img">
       <div class="banner-text">
         <h1>AV-løsninger for moderne kontorer og møterom</h1>
       </div>
