--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>LS LiveSolutions</title>
+  <title>LS</title>
   <link rel="stylesheet" href="css/style.css">
   <!-- Firebase SDK -->
   <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-app-compat.js"></script>
@@ -12,12 +12,10 @@
 </head>
 <body>
   <header>
-    <img src="img/logo.png" alt="LS LiveSolutions Logo" class="logo">
+    <img src="img/logo.png" alt="LS LiveSolutions Logo" class="logo" href="index.html">
     <nav>
       <ul>
-        <li><a href="index.html">Hjem</a></li>
         <li><a href="about.html">Om Oss</a></li>
-        <li><a href="solutions.html">Løsninger</a></li>
         <li><a href="contact.html">Kontakt</a></li>
       </ul>
     </nav>
