--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
       <div id="chatbox">
         <div id="chat-messages"></div>
         <div id="chat-input-area">
-          <input type="text" id="chat-input" placeholder="Hva er du på jakt etter? La meg hjelpe deg finne en løsning!" />
+          <input type="text" id="chat-input" placeholder="Hva tenker du?" />
           <button id="download-chat"></button>
         </div>
       </div>
