--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,9 @@
 </head>
 <body>
   <header>
-    <img src="img/logo.png" alt="LS LiveSolutions Logo" class="logo" href="index.html">
+    <a href="index.html">
+      <img src="img/logo.png" alt="LS LiveSolutions Logo" class="logo">
+    </a>
     <nav>
       <ul>
         <li><a href="about.html">Om Oss</a></li>
