--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,15 @@
 </head>
 <body>
   <header>
-    <a href="index.html">
-      <img src="img/logo.png" alt="LS LiveSolutions Logo" class="logo">
-    </a>
-    <nav>
+    <div class="header-left">
+      <span class="company-name">LiveSolutions</span>
+    </div>
+    <div class="header-center">
+      <a href="index.html">
+        <img src="img/logo.png" alt="LS LiveSolutions Logo" class="logo">
+      </a>
+    </div>
+    <nav class="header-right">
       <ul>
         <li><a href="about.html">Om Oss</a></li>
         <li><a href="contact.html">Kontakt</a></li>
