--- a/public/about.html
+++ b/public/about.html
@@ -8,11 +8,17 @@
 </head>
 <body>
   <header>
-    <img src="img/logo.png" alt="LS LiveSolutions Logo" class="logo">
-    <nav>
+    <div class="header-left">
+      <span class="company-name">LiveSolutions</span>
+    </div>
+    <div class="header-center">
+      <a href="index.html">
+        <img src="img/logo.png" alt="LS LiveSolutions Logo" class="logo">
+      </a>
+    </div>
+    <nav class="header-right">
       <ul>
-        <li><a href="index.html">Hjem</a></li>
-        <li><a href="solutions.html">Tidligere Løsninger</a></li>
+        <li><a href="about.html">Om Oss</a></li>
         <li><a href="contact.html">Kontakt</a></li>
       </ul>
     </nav>
@@ -20,20 +26,21 @@
   <main>
     <section class="about">
       <h1>Om LS LiveSolutions</h1>
-      <p>[Placeholder: LS LiveSolutions har levert innovative møterom og sceneproduksjoner i Norge i X år. Vi brenner for å skape løsninger som forvandler dine ideer til virkelighet.]</p>
+      <p>LS LiveSolutions har levert innovative AV-løsninger for kontorer og møterom i Norge i over 5 år. Vi brenner for å skape moderne, funksjonelle arbeidsplasser som forvandler dine ideer til virkelighet. Vårt team spesialiserer seg på alt fra skjermer og lydsystemer til komplette møteromsløsninger.</p>
+      <img src="img/office-project.jpg" alt="Completed Office AV Project" class="about-img">
       <h2>Vårt Team</h2>
       <div class="team">
         <div class="team-member">
-          <img src="img/placeholder.jpg" alt="Ansatt 1">
-          <h3>[Navn]</h3>
-          <p>[Rolle]<br>E-post: [epost@eksempel.no]<br>Telefon: [+47 123 45 678]</p>
+          <img src="img/team-member1.jpg" alt="Ansatt 1">
+          <h3>Anna Nilsen</h3>
+          <p>AV-ekspert og prosjektleder<br>E-post: anna@livesolutions.no<br>Telefon: +47 123 45 678</p>
         </div>
-        <!-- Legg til flere teammedlemmer her -->
+        <!-- Legg til flere teammedlemmer her om ønskelig -->
       </div>
     </section>
   </main>
   <footer>
-    <p>LS LiveSolutions AS<br>[Lageradresse]<br>Telefon: [+47 123 45 678]<br>E-post: [info@livesolutionss.no]<br><a href="/privacy.html">Personvernerklæring</a></p>
+    <p>LS LiveSolutions AS<br>Industriveien 123, 1234 Oslo<br>Telefon: +47 123 45 678<br>E-post: info@livesolutions.no<br><a href="/privacy.html">Personvernerklæring</a></p>
   </footer>
 </body>
 </html>
