--- a/public/about.html
+++ b/public/about.html
@@ -24,18 +24,13 @@
     </nav>
   </header>
   <main>
-    <section class="about">
-      <h1>Om LS LiveSolutions</h1>
-      <p>LS LiveSolutions har levert innovative AV-løsninger for kontorer og møterom i Norge i over 5 år. Vi brenner for å skape moderne, funksjonelle arbeidsplasser som forvandler dine ideer til virkelighet. Vårt team spesialiserer seg på alt fra skjermer og lydsystemer til komplette møteromsløsninger.</p>
-      <img src="img/office-project.jpg" alt="Completed Office AV Project" class="about-img">
-      <h2>Vårt Team</h2>
-      <div class="team">
-        <div class="team-member">
-          <img src="img/team-member1.jpg" alt="Ansatt 1">
-          <h3>Anna Nilsen</h3>
-          <p>AV-ekspert og prosjektleder<br>E-post: anna@livesolutions.no<br>Telefon: +47 123 45 678</p>
-        </div>
-        <!-- Legg til flere teammedlemmer her om ønskelig -->
+    <section class="about-hero">
+      <img src="img/office3.jpg" alt="Office Background" class="about-hero-img">
+      <div class="about-hero-text">
+        <h1>Om LS LiveSolutions</h1>
+        <p>LS LiveSolutions har i over fem år spesialisert seg på å levere førsteklasses AV-løsninger til moderne kontorer og møterom over hele Norge. Vi er lidenskapelige opptatt av å skape funksjonelle og innovative arbeidsmiljøer som støtter dine forretningsmål.</p>
+        <p>Vårt team består av eksperter innen lyd, bilde og teknologi, og vi jobber tett med kundene våre for å skreddersy løsninger som passer deres unike behov. Enten du trenger en enkel skjerminstallasjon eller en komplett møteromsløsning, er vi her for å hjelpe deg.</p>
+        <p>Vi tror på kvalitet, pålitelighet og bærekraft, og vi er stolte av å ha bygget langvarige relasjoner med våre kunder. La oss hjelpe deg med å ta ditt kontor til neste nivå!</p>
       </div>
     </section>
   </main>
