--- a/public/contact.html
+++ b/public/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kontakt - LS LiveSolutions</title>
+  <title>LS</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -28,7 +28,7 @@
       <h1>Kontakt Oss</h1>
       <p>Har du spørsmål om AV-løsninger for ditt kontor eller møterom? Ta kontakt med oss, så hjelper vi deg med å finne den perfekte løsningen!</p>
       <div class="contact-info">
-        <p><strong>LS LiveSolutions AS</strong><br>Eplehagan 4, 3084 Holmestrand<br>Org.nr: 920 859 623</p>
+        <p class="company-info"><strong>LiveSolutions AS</strong><br>Eplehagan 4, 3084 Holmestrand<br>Org.nr: 920 859 623</p>
         <h2>Våre Ansatte</h2>
         <ul class="employee-list">
           <li>
