--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>LS</title>
+  <title> · LS · </title>
   <link rel="stylesheet" href="css/style.css">
   <!-- Firebase SDK -->
   <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-app-compat.js"></script>
@@ -36,10 +36,12 @@
     </section>
     <section class="chat-section">
       <div id="chatbox">
-        <div id="chat-messages"></div>
-        <div id="chat-input-area">
-          <input type="text" id="chat-input" placeholder="Hva tenker du?" />
-          <button id="download-chat"></button>
+        <div class="chat-content">
+          <div id="chat-messages"></div>
+          <div id="chat-input-area">
+            <input type="text" id="chat-input" placeholder="Hva tenker du?" />
+            <button id="download-chat"></button>
+          </div>
         </div>
       </div>
     </section>
