--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
     </section>
   </main>
   <footer>
-    <p>© 2025 LS LiveSolutions</p>
+    <p>LS LiveSolutions AS<br>Eplehagan 4, 3084 Holmestrand<br>Telefon: +47 123 45 678<br>E-post: info@livesolutions.no<br><a href="/privacy.html">Personvernerklæring</a></p>
   </footer>
   <script src="js/chat.js"></script>
 </body>
