--- a/public/contact.html
+++ b/public/contact.html
@@ -28,7 +28,7 @@
       <h1>Kontakt Oss</h1>
       <p>Har du spørsmål om AV-løsninger for ditt kontor eller møterom? Ta kontakt med oss, så hjelper vi deg med å finne den perfekte løsningen!</p>
       <div class="contact-info">
-        <p class="company-info"><strong>LiveSolutions AS</strong><br>Vestlia 28, 3089 Holmestrand<br>Org.nr: 920 859 623<br>+47 400 20 495<br>jp@livesolutions.no<br>© 2025 LiveSolutions AS</p>
+        <p class="company-info"><strong>LiveSolutions AS</strong><br>Vestlia 28, 3089 Holmestrand<br>Org.nr: 920 859 623<br>+47 400 20 495</p>
         <h2>Våre Ansatte</h2>
         <ul class="employee-list">
           <li>
