--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
     </section>
   </main>
   <footer>
-    <p>LS LiveSolutions AS<br>Eplehagan 4, 3084 Holmestrand<br>Telefon: +47 123 45 678<br>E-post: info@livesolutions.no<br><a href="/privacy.html">Personvernerklæring</a></p>
+    <p><strong>LiveSolutions AS</strong><br>Vestlia 28, 3089 Holmestrand<br>Org.nr: 920 859 623<br>+47 400 20 495<br>jp@livesolutions.no<br>© 2025 LiveSolutions AS</p>
   </footer>
   <script src="js/chat.js"></script>
 </body>
