--- a/public/contact.html
+++ b/public/contact.html
@@ -52,7 +52,7 @@
     </section>
   </main>
   <footer>
-    <p><strong>LiveSolutions AS</strong><br>Vestlia 28, 3089 Holmestrand<br>Org.nr: 920 859 623<br>+47 400 20 495<br>jp@livesolutions.no<br>© 2025 LiveSolutions AS</p>
+    <p>© 2025 LiveSolutions AS</p>
   </footer>
 </body>
 </html>
