--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 <body>
   <header>
     <div class="header-left">
-      <span class="company-name">LiveSolutions</span>
+      <a href="index.html" class="company-name">LiveSolutions</a>
     </div>
     <div class="header-center">
       <a href="index.html">
