--- a/public/contact.html
+++ b/public/contact.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <div class="header-left">
-      <span class="company-name">LiveSolutions</span>
+      <a href="index.html" class="company-name">LiveSolutions</a>
     </div>
     <div class="header-center">
       <a href="index.html">
